--- a/src/components/navigation/Header.astro
+++ b/src/components/navigation/Header.astro
@@ -1,12 +1,13 @@
 ---
-// src/components/navigation/Header.astro
+import Images from "../images/Logo_Parque.png"
+
 export interface Props {
   titleImage?: string;
   userName?: string;
 }
 
 const {
-  titleImage = "/mi_Parqueadero/src/images/Logo_Parque.png",
+  titleImage = "https://res.cloudinary.com/dlxf1d5ag/image/upload/v1748581231/Logo_Parque_km3m6x.png",
   userName = "Admin",
 } = Astro.props;
 ---
@@ -14,8 +15,8 @@ const {
 <header class="bg-white shadow-sm border-b border-gray-200">
   <div class="flex items-center justify-between px-6 py-4">
     <div class="flex items-center">
-      <img src={titleImage} alt="Logo" class="h-8 w-auto mr-3" />
-      <h2 class="text-2xl font-semibold text-gray-800">Mi Parqueadero</h2>
+      <!-- <img src={titleImage} alt="Logo" class="h-2 w-2 mr-3" /> -->
+      <h2 class="text-2xl font-semibold text-gray-800">PARQUEADERO EL PIJAO</h2> 
     </div>
     <div class="flex items-center space-x-4">
       <!-- Registro Button -->
@@ -57,7 +58,7 @@ const {
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 4a1 1 0 011-1h12a1 1 0 011 1v2a1 1 0 01-1 1H4a1 1 0 01-1-1V4zM3 10a1 1 0 011-1h6a1 1 0 011 1v6a1 1 0 01-1 1H4a1 1 0 01-1-1v-6zM14 9a1 1 0 00-1 1v6a1 1 0 001 1h2a1 1 0 001-1v-6a1 1 0 00-1-1h-2z"/>
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
                             </svg>
-                            Dashboard
+                             Inicio
                         </div>
                     </a> 
           <a
@@ -85,6 +86,34 @@ const {
               Registros
             </div>
           </a>
+           <a href="/Abonados" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition-colors">
+                        <div class="flex items-center">
+                            <svg class="w-4 h-4 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                               
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.196-2.121M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.196-2.121M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"></path>
+                            </svg>
+                       
+                            
+      </svg>
+  
+</svg>
+
+                            Abonar
+                        </div>
+                    </a> 
+           <a href="/tarifas" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 transition-colors">
+                        <div class="flex items-center">
+                            <svg class="w-4 h-4 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                               
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.25 18.75a60.07 60.07 0 0 1 15.797 2.101c.727.198 1.453-.342 1.453-1.096V18.75M3.75 4.5v.75A.75.75 0 0 1 3 6h-.75m0 0v-.375c0-.621.504-1.125 1.125-1.125H20.25M2.25 6v9m18-10.5v.75c0 .414.336.75.75.75h.75m-1.5-1.5h.375c.621 0 1.125.504 1.125 1.125v9.75c0 .621-.504 1.125-1.125 1.125h-.375m1.5-1.5H21a.75.75 0 0 0-.75.75v.75m0 0H3.75m0 0h-.375a1.125 1.125 0 0 1-1.125-1.125V15m1.5 1.5v-.75A.75.75 0 0 0 3 15h-.75M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm3 0h.008v.008H18V10.5Zm-12 0h.008v.008H6V10.5Z"/>
+                            </svg>
+                       
+  
+</svg>
+
+                            Tarifas
+                        </div>
+                    </a> 
 
           <hr class="my-1 border-gray-200" />
           <button
