--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,3 +20,8 @@ const { title = "ParqueAdmin  " } = Astro.props;
     <slot />
 </body>
 </html>
+<style is:global>
+  html {
+    font-family: system-ui, sans-serif;
+  }
+</style>
